Fixes data in treemap

--- a/treemap.html
+++ b/treemap.html
@@ -4,7 +4,7 @@
         <script src= "https://cdn.zingchart.com/zingchart.min.js"></script>
     </head>
     <body>
-        <h1>Maior nível de formação em computação</h1>
+        <h1>Maior nível de formação em computação - maior nivel? como colocar os outros?</h1>
         <div id='myChart'></div>
         <script type="text/javascript">
           var myConfig = {
@@ -44,18 +44,6 @@
                        text:"Outros",
                        value: 21.00,
                        "data-catagory":"graduated",
-                       children: [
-                           {
-                             text: "outro outro",
-                             value: 312.00,
-                             "data-catagory":"Housing"
-                           },
-                           {
-                             text: "outro 2",
-                             value: 89.00,
-                             "data-catagory":"Housing"
-                           }
-                         ]
                     }
                 ]
               },
